--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Custom -->
+    <link href="assets/css/custom.scss" rel="stylesheet">
+  <!-- Custom -->
+  <link href="assets/css/timeline.css" rel="stylesheet">
     <!-- Font -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- Open Sans for body font -->
@@ -52,11 +55,15 @@
 <script type="text/javascript" src="assets/js/slick.min.js"></script>
 <!-- Event Counter -->
 <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
+<!-- Progress Bar -->
+<script type="text/javascript" src="assets/js/progress.js"></script>
 <!-- Ajax contact form  -->
 <script type="text/javascript" src="assets/js/app.js"></script>
 <!-- Custom js -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
-
+<!--pie chart-->
+<script type="text/javascript" src="//cdn.jsdelivr.net/snap.svg/0.1.0/snap.svg-min.js"></script>
+<script src="assets/js/piechart.js"></script>
 
 
 </html>
