Registration Page - first draft!

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BeFunApp</title>
+    <title>Ether Delta ICO</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom -->
     <link href="assets/css/custom.scss" rel="stylesheet">
-  <!-- Custom -->
-  <link href="assets/css/timeline.css" rel="stylesheet">
+    <!-- Custom -->
+    <link href="assets/css/timeline.css" rel="stylesheet">
     <!-- Font -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <!-- Open Sans for body font -->
