--- a/src/index.html
+++ b/src/index.html
@@ -2,47 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>BeFunApp</title>
-    <base href="/">
+  <meta charset="utf-8">
+  <title>EtherDelta</title>
+  <base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom -->
-    <link href="assets/css/custom.scss" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/icon/x-icon" href="favicon.ico">
+  <!-- Bootstrap -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom -->
+  <link href="assets/css/custom.scss" rel="stylesheet">
   <!-- Custom -->
   <link href="assets/css/timeline.css" rel="stylesheet">
-    <!-- Font -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Open Sans for body font -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
-    <!-- Montserrat for title -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- Font -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Open Sans for body font -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
+  <!-- Montserrat for title -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
-    <app-root></app-root>
+<app-root></app-root>
 </body>
 <!-- Start footer -->
 <footer id="mu-footer" role="contentinfo">
-    <div class="container">
-        <div class="mu-footer-area">
-            <div class="mu-footer-top">
-                <div class="mu-social-media">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-youtube"></i></a>
-                </div>
-            </div>
-            <div class="mu-footer-bottom">
-                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
-            </div>
+  <div class="container">
+    <div class="mu-footer-area">
+      <div class="mu-footer-top">
+        <div class="mu-social-media">
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-google-plus"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-youtube"></i></a>
         </div>
+      </div>
+      <div class="mu-footer-bottom">
+        <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right
+          reserved.</p>
+      </div>
     </div>
+  </div>
 
 </footer>
 <!-- End footer -->
@@ -62,6 +63,11 @@
 <script type="text/javascript" src="assets/js/app.js"></script>
 <!-- Custom js -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
+<!--Canvas js-->
+<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+<!--LineChart js-->
+<script type="text/javascript" src="assets/js/linechart.js"></script>
 <!--pie chart-->
 <script type="text/javascript" src="//cdn.jsdelivr.net/snap.svg/0.1.0/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
