--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
-  <meta charset="utf-8">
-  <title>EtherDelta</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/icon/x-icon" href="favicon.ico">
-  <!-- Bootstrap -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom -->
-  <link href="assets/css/custom.scss" rel="stylesheet">
-  <!-- Custom -->
-  <link href="assets/css/timeline.css" rel="stylesheet">
-  <!-- Font -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-  <!-- Open Sans for body font -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
-  <!-- Montserrat for title -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-=======
     <meta charset="utf-8">
     <title>Ether Delta ICO</title>
     <base href="/">
@@ -40,31 +20,30 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
     <!-- Montserrat for title -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
->>>>>>> 5fecad8bf1581dad43daaf1663dd91f24d87964a
 </head>
 
 <body>
-<app-root></app-root>
+    <app-root></app-root>
 </body>
 <!-- Start footer -->
 <footer id="mu-footer" role="contentinfo">
-  <div class="container">
-    <div class="mu-footer-area">
-      <div class="mu-footer-top">
-        <div class="mu-social-media">
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-google-plus"></i></a>
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-youtube"></i></a>
+    <div class="container">
+        <div class="mu-footer-area">
+            <div class="mu-footer-top">
+                <div class="mu-social-media">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="mu-footer-bottom">
+                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.
+                </p>
+            </div>
         </div>
-      </div>
-      <div class="mu-footer-bottom">
-        <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right
-          reserved.</p>
-      </div>
     </div>
-  </div>
 
 </footer>
 <!-- End footer -->
