remove use of CDN -> import all reference using local assets.

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 <!-- End footer -->
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/web3@0.20.1/dist/web3.min.js"></script>
+<script src="asset/js/web3.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <!-- Bootstrap -->
 <script src="assets/js/bootstrap.min.js"></script>
@@ -64,12 +64,11 @@
 <!-- Custom js -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
 <!--Canvas js-->
-<script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+<script src="assets/js/jquery.canvasjs.min.js"></script>
 <!--LineChart js-->
 <script type="text/javascript" src="assets/js/linechart.js"></script>
 <!--pie chart-->
-<script type="text/javascript" src="//cdn.jsdelivr.net/snap.svg/0.1.0/snap.svg-min.js"></script>
+<script type="text/javascript" src="assets/js/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
 
 
