--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ether Delta ICO</title>
+    <title>Ether Delta</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="mu-footer-bottom">
-                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.
+                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="https://etherdelta.com">etherdelta.com</a>. All right reserved.
                 </p>
             </div>
         </div>
@@ -49,7 +49,7 @@
 <!-- End footer -->
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="asset/js/web3.min.js"></script>
+<script src="assets/js/web3.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <!-- Bootstrap -->
 <script src="assets/js/bootstrap.min.js"></script>
@@ -70,6 +70,6 @@
 <!--pie chart-->
 <script type="text/javascript" src="assets/js/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
-
-
+<!--new line chart-->
+<script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>
 </html>
