Translation for en, cn completed

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="mu-footer-bottom">
-                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="https://etherdelta.com">etherdelta.com</a>. All right reserved.
+                <p class="mu-copy-right">&copy; Copyright by <a rel="nofollow" href="https://etherdelta.com">etherdelta.com</a>. All right reserved.
                 </p>
             </div>
         </div>
@@ -72,4 +72,5 @@
 <script src="assets/js/piechart.js"></script>
 <!--new line chart-->
 <script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>
+
 </html>
