--- a/src/index.html
+++ b/src/index.html
@@ -64,13 +64,13 @@
 <!-- Custom js -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
 <!--Canvas js-->
-<script src="assets/js/jquery.canvasjs.min.js"></script>
+<!--<script src="assets/js/jquery.canvasjs.min.js"></script>-->
 <!--LineChart js-->
-<script type="text/javascript" src="assets/js/linechart.js"></script>
+<!--<script type="text/javascript" src="assets/js/linechart.js"></script>-->
 <!--pie chart-->
 <script type="text/javascript" src="assets/js/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
 <!--new line chart-->
-<script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>
+<!--<script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>-->
 
 </html>
