--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,8 @@
 <!--pie chart-->
 <script type="text/javascript" src="assets/js/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
+<!-- moment.js-->
+<script src="assests/js/moment-timezone.js"></script>
 <!--new line chart-->
 <!--<script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>-->
 
