--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 <!-- Event Counter -->
 <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
 <!-- Progress Bar -->
-<script type="text/javascript" src="assets/js/progress.js"></script>
+<!-- <script type="text/javascript" src="assets/js/progress.js"></script> -->
 <!-- Ajax contact form  -->
 <script type="text/javascript" src="assets/js/app.js"></script>
 <!-- Custom js -->
