Final Commit all

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
     <!-- Custom -->
     <link href="assets/css/timeline.css" rel="stylesheet">
     <!-- Font -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <!-- Open Sans for body font -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
+    <link href="assets/css/opensans.css" rel="stylesheet">
     <!-- Montserrat for title -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="assets/css/Montserrat.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 </footer>
 <!-- End footer -->
 <!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/web3.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <!-- Bootstrap -->
@@ -57,22 +57,11 @@
 <script type="text/javascript" src="assets/js/slick.min.js"></script>
 <!-- Event Counter -->
 <script type="text/javascript" src="assets/js/jquery.countdown.min.js"></script>
-<!-- Progress Bar -->
- <script type="text/javascript" src="assets/js/progress.js"></script>
-<!-- Ajax contact form  -->
-<script type="text/javascript" src="assets/js/app.js"></script>
 <!-- Custom js -->
 <script type="text/javascript" src="assets/js/custom.js"></script>
-<!--Canvas js-->
-<!--<script src="assets/js/jquery.canvasjs.min.js"></script>-->
-<!--LineChart js-->
-<!--<script type="text/javascript" src="assets/js/linechart.js"></script>-->
+
 <!--pie chart-->
 <script type="text/javascript" src="assets/js/snap.svg-min.js"></script>
 <script src="assets/js/piechart.js"></script>
-<!-- moment.js-->
-
-<!--new line chart-->
-<!--<script type="text/javascript" src="assets/js/Chart.bundle.min.js"></script>-->
 
 </html>
